[package]
name = "arc-cow"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arthur-zhang/arc-cow"
keywords = ["arc", "cow"]
description = "ArcCow is a Rust smart pointer that combines the best features of Cow (clone-on-write) and Arc (atomic reference counting) to provide efficient, flexible data handling."
authors = [
    "Arthur Zhang <happyzhangya@gmail.com>",
]
[dependencies]
